--- a/styles/globals.css
+++ b/styles/globals.css
@@ -56,9 +56,10 @@
         @apply font-bold p-1 text-xl mt-10
     }
      
-    .para
+    .backgroundCustomCss
     {
-        @apply pb-3
+        background: linear-gradient(90deg, rgba(12,0,48,1) 0%, rgba(0,0,0,1) 100%);
+
     }
 
 
